fixed paragraph alignment.

--- a/scss/components/_contact-section.scss
+++ b/scss/components/_contact-section.scss
@@ -1,3 +1,7 @@
+#contact p {
+    margin: 0 auto;
+}
+
 .social-links-wrapper {
     margin: 2rem 0 0 0;
 }
